# cpp-sdl-template

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
assets/audio/: Licence.txt
src/: main.cpp
